# react-native-nitro-jsdom

./: .clangd  .gitignore  .gitmodules  LICENSE  NitroJsdom.podspec  README.md  compile_flags.txt  nitro.json  package.json
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-build.yml  ios-build.yml  release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/nitrojsdom/: NitroJsdomPackage.kt
cpp/: DOMBindings.cpp  DOMBindings.hpp  HybridHtmlSandbox.cpp  HybridHtmlSandbox.hpp  HybridNitroJsdom.cpp  HybridNitroJsdom.hpp  LexborDocument.cpp  QuickJSRuntime.cpp  QuickJSRuntime.hpp
cpp/lexbor/: LexborDocument.cpp  LexborDocument.hpp
cpp/quickjs/: DOMBindings.cpp  QuickJSRuntime.cpp  QuickJSRuntime.hpp
docs/: overview.md
example/: App.tsx  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/nitrojsdomexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroJsdomExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroJsdomExample.xcodeproj/: project.pbxproj
example/ios/NitroJsdomExample.xcodeproj/xcshareddata/xcschemes/: NitroJsdomExample.xcscheme
example/ios/NitroJsdomExample.xcworkspace/: contents.xcworkspacedata
example/src/: Playground.tsx  styles.ts
example/src/types/: IResult.ts  index.ts
ios/: Bridge.h
scripts/: setup-clangd.sh
src/: index.ts
src/classes/: index.ts
src/classes/JSDOM/: JSDOM.class.ts  index.ts
src/classes/JSDOM/types/: IJSDOMOptions.ts  index.ts
src/specs/: HtmlSandbox.nitro.ts  nitro-jsdom.nitro.ts
